# stem-cli

./: CHANGELOG.md  LICENSE  README.md  pyproject.toml  setup.py
stem/: __init__.py  __main__.py  agent.py  cli.py  display.py  git.py  state.py  summary.py  tui.py  util.py  watcher.py
stem/core/: __init__.py  agent.py  db.py  git.py  paths.py  queue.py  registry.py  schema.sql  util.py
stem/templates/: bootstrap_prompt.txt  branch.json  jump_prompt.txt  leaf.json  stem.md
