[project]
name = "stem"
version = "0.1.0"
description = "Post-hoc, feature-led exploratory history system layered on top of Git"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

[project.scripts]
stem = "stem.cli:main"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["stem*"]

[tool.setuptools.package-data]
stem = ["core/schema.sql", "templates/*.txt", "templates/*.md", "templates/*.json"]
